# pdf-rasterizer

./: Cargo.toml
src/: lib.rs  main.rs  offscreen.rs
src/text/: font.rs  mod.rs
