[package]
name = "rasterizer"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre = "0.6.12"
image = { version = "0.25.8", features = ["png"] }
kurbo = "0.11.2"
lopdf = "0.36.0"
owned_ttf_parser = "0.25.1"
pdfium-render = { version = "0.8.35", features = ["image"] }
peniko = "0.4.1"
pollster = "0.4.0"
vello = "0.5.1"
wgpu = "24.0.3"
winit = "0.30.10"

[profile.dev.package.png]
opt-level = 3

[profile.dev.package.image]
opt-level = 3
